samples/_failures_safe/1761129075_e024a8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a94ff6d6.c: In function ‘main’:
./samples/SAFE/__tmp_a94ff6d6.c:132:9: error: expected declaration or statement at end of input
  132 |         return EXIT_FAILURE;
      |         ^~~~~~
./samples/SAFE/__tmp_a94ff6d6.c:132:9: error: expected declaration or statement at end of input
